--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,52 @@
 {% endblock %}
 
 {% block content %}
-<div class="sidehead1">
+<!-- #SideBar -->
+
+<div class="card card-side border-0" style="width: 18rem;" id="bg-gray">
+  <div class="container mb-2">
+    <img src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Profile Pic" class="pro-img">
+    <a class="side-username" href="#">mearshadaman</a>
+
+    <!-- #Suggested Account  Remove multiple copies while coding backend-->
+
+    <div id="suggestion" >Suggestions For You</div>
+
+    <ul>
+      <li><img src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Profile Pic" class="suggest-pro-img">
+        <a class="suggest-username" href="#">mearshadaman</a> <a href="#" class="suggest-follow">Follow</a></li>
+      <li><img src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Profile Pic" class="suggest-pro-img">
+        <a class="suggest-username" href="#">intekab_raza</a> <a href="#" class="suggest-follow">Follow</a></li>
+      <li><img src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Profile Pic" class="suggest-pro-img">
+        <a class="suggest-username" href="#">mrutunjaypanda</a> <a href="#" class="suggest-follow">Follow</a></li>
+    </ul>
+
+  </div>
+  <div class="card-footer border-0" id="bg-gray">
+    About . Help . Press . API . Jobs . Privacy . Terms . Locations . Top Accounts . Hashtags . Language . 
+English
+
+<div id="copyright">© 2021 ShareGram FROM CODEINPUT</div> 
+  </div>
 </div>
 
-<!-- <div class="sidehead2">
-</div> -->
+<!-- Post Card  -->
 
-<div class="card container mt-2" style="width: 30%;">
+<div class="card card-main mt-2" style="width: 30%;">
   <br>
+  <div class="container mb-2">
     <img src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Profile Pic" class="user-img">
-    <p class="card-user">User Name</p>
+    <p class="card-user">intekab_raza</p>
+  </div>
     <img src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" class="card-img-top" alt="Post Image">
     <div class="card-body">
       <h5 class="card-title">Post Title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn-like"><i class="far fa-heart fa-lg"></i></a>
       <a href="#" class="btn-comnt"><i class="far fa-comment fa-lg"></i></a>
-      <p class="likes">0 likes</p>
+      <p class="likes">100 likes</p>
     </div>
   </div>
+
 
 {% endblock %}
