--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <title>{% block title %}{% endblock %} - My Webpage</title>
+    <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
   <body style="background-color: rgb(248, 246, 246);">
@@ -14,23 +14,22 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto navbar-items colornav">
           <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-home"></i><span class="sr-only"></span></a>
+            <a class="nav-link colornav" href="#"><i class="fas fa-home fa-lg"></i><span class="sr-only"></span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="far fa-user"></i><span class="sr-only"></span></a>
+            <a class="nav-link colornav" href="#"><i class="far fa-user fa-lg"></i><span class="sr-only"></span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-user-plus"></i><span class="sr-only"></span></a>
+            <a class="nav-link colornav" href="#"><i class="fas fa-user-plus fa-lg"></i><span class="sr-only"></span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-door-open"></i><span class="sr-only"></span></a>
+            <a class="nav-link colornav" href="#"><i class="fas fa-door-open fa-lg"></i><span class="sr-only"></span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-sign-out-alt"></i><span class="sr-only"></span></a>
+            <a class="nav-link colornav" href="#"><i class="fas fa-sign-out-alt fa-lg"></i><span class="sr-only"></span></a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
