--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/jpg" href="{{ url_for('static', filename='sharegram.png') }}"/>
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
@@ -17,21 +18,28 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto navbar-items colornav">
           <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-home fa-lg"></i><span class="sr-only"></span></a>
+            <a class="nav-link colornav" href="{{ url_for('home') }}"><i class="fas fa-home fa-lg"></i><span class="sr-only"></span></a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="far fa-user fa-lg"></i><span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-user-plus fa-lg"></i><span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-door-open fa-lg"></i><span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link colornav" href="#"><i class="fas fa-sign-out-alt fa-lg"></i><span class="sr-only"></span></a>
-          </li>
+          {% if current_user.is_authenticated %}  
+            <li class="nav-item active">
+              <a class="nav-link colornav" href="{{ url_for('profile') }}"><i class="far fa-user fa-lg"></i><span class="sr-only"></span></a>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link colornav" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt fa-lg"></i><span class="sr-only"></span></a>
+            </li>
+            
+          {% else %}
+            <li class="nav-item active">
+              <a class="nav-link colornav" href="{{ url_for('login') }}"><i class="fas fa-sign-in-alt fa-lg"></i><span class="sr-only"></span></a>
+            </li> 
+                    
+            <li class="nav-item active">
+              <a class="nav-link colornav" href="{{ url_for('register_user') }}"><i class="fas fa-user-plus fa-lg"></i><span class="sr-only"></span></a>
+            </li>
+        {% endif %}
         </ul>
+
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
