--- a/templates/login.html
+++ b/templates/login.html
@@ -7,14 +7,22 @@
 {% block content %}
 
 <div class="container login-form">
-<form>
+  {% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div class="notification is-danger">
+        {{ messages[0] }}
+    </div>
+{% endif %}
+{% endwith %}
+<form method="POST" action="/login">
+  <form method="POST" action="{url_for('login')}">
     <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="login_email" aria-describedby="email">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" id="username" aria-describedby="username" name="login_username" required>
     </div>
     <div class="form-group">
       <label for="Password">Password</label>
-      <input type="password" class="form-control" id="loginpassword">
+      <input type="password" class="form-control" id="loginpassword" name="login_password">
     </div>
     <button type="submit" class="btn btn-primary btn-login">Submit</button>
   </form>
